--- a/package.json
+++ b/package.json
@@ -1,32 +1,23 @@
 {
-
-  "name": "param-portfolio",
+  "name": "utils",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "axios": "^0.21.4",
-    "bootstrap": "^3.4.1",
-    
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "firebase": "^9.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-github-calendar": "^2.0.2",
-    "react-icons": "^4.2.0",
-    "react-parallax-tilt": "^1.4.68",
-    "react-particles-js": "^3.4.1",
-    "react-preloaders": "^3.0.3",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-tsparticles": "^1.35.0",
-    "typewriter-effect": "^2.17.0",
-    "web-vitals": "^0.2.4"
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dark-mode-toggle": "^0.2.0",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
-    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
